# Kursovai_5

./: .env.sample  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
bot/: admin.py  apps.py  models.py  tests.py
bot/management/commands/: start_bot.py
bot/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habits/management/commands/: periodic_tasks.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
